fixed overflow along x axis in hero component

--- a/client/src/styles/components/_hero.scss
+++ b/client/src/styles/components/_hero.scss
@@ -36,7 +36,6 @@
   max-width: 1300px;
   /* max-width: 70vw; */
   margin: 0 auto;
-  padding: 0 350px;
 }
 .hero-info {
   /* width: 100% */
